--- a/09-Programming-Cues-and-Scenes.Rmd
+++ b/09-Programming-Cues-and-Scenes.Rmd
@@ -4,24 +4,24 @@ This chapter deals with storing and editing Editor values.
 
 **The following is covered in this chapter:**
 
-- [10.1. What Are Qlists, Cues, Scenes, and Submasters?](#WhatAreQlists-Cues-Scenes-andSubmasters-10.1.)
-- [10.2. Tracking Principals](#TrackingPrincipals-10.2.)
-- [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.)
-- [10.4. Master Controller](#MasterController-10.4.)
-- [10.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-10.5.)
-- [10.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-10.6.)
-- [10.7. Cue Store Options](#CueStoreOptions-10.7.)
-- [10.8. Assigning Text Labels](#AssigningTextLabels-10.8.)
-- [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
-- [10.10. Creating New Cues from Existing Cue Data](#CreatingNewCuesfromExistingCueData-10.10.)
-- [10.11. Cue Time Properties](#CueTimeProperties-10.11.)
-- [10.12. Additional Cue Properties](#AdditionalCueProperties-10.12.)
-- [10.13. Parameter Time](#ParameterTime-10.13.)
-- [10.14. Parameter Profile](#ParameterProfile-10.14.)
-- [10.15.  Group Submasters](#GroupSubmasters-10.15.)
+- [9.1. What Are Qlists, Cues, Scenes, and Submasters?](#WhatAreQlists-Cues-Scenes-andSubmasters-9.1.)
+- [9.2. Tracking Principals](#TrackingPrincipals-9.2.)
+- [9.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-9.3.)
+- [9.4. Master Controller](#MasterController-9.4.)
+- [9.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-9.5.)
+- [9.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-9.6.)
+- [9.7. Cue Store Options](#CueStoreOptions-9.7.)
+- [9.8. Assigning Text Labels](#AssigningTextLabels-9.8.)
+- [9.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-9.9.)
+- [9.9. Creating New Cues from Existing Cue Data](#CreatingNewCuesfromExistingCueData-9.10.)
+- [9.11. Cue Time Properties](#CueTimeProperties-9.11.)
+- [9.12. Additional Cue Properties](#AdditionalCueProperties-9.12.)
+- [9.13. Parameter Time](#ParameterTime-9.13.)
+- [9.14. Parameter Profile](#ParameterProfile-9.14.)
+- [9.15.  Group Submasters](#GroupSubmasters-9.15.)
 
 
-## What Are Qlists, Cues, Scenes, and Submasters? {#WhatAreQlists-Cues-Scenes-andSubmasters-10.1.}
+## What Are Qlists, Cues, Scenes, and Submasters? {#WhatAreQlists-Cues-Scenes-andSubmasters-9.1.}
 
 
 **Qlists:**
@@ -83,7 +83,7 @@ Submasters:
 
 
 
-## Tracking Principals {#TrackingPrincipals-10.2.}
+## Tracking Principals {#TrackingPrincipals-9.2.}
 
 
 
@@ -100,7 +100,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 
 -   Each parameter cell can have its own individual time which overrides overall cue time. This allows, for example, Pan/Tilt to have a separate transition time or Color Wheels to snap to their values instead of using overall cue time.
     
--   As Vibe's default behaviour for parameters it **LTP** (The last action takes precedent), a cell assigned its own time will continue to run its time until either the stored time runs out or it encounters a new hard value.
+-   As Vibe's default behavior for parameters it **LTP** (The last action takes precedent), a cell assigned its own time will continue to run its time until either the stored time runs out or it encounters a new hard value.
 
 >Some traditional theatre consoles call "Hard Values" "Move Instructions" and cells that are in transition, "Move Fades".
 
@@ -139,7 +139,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 
 
 
-## Storing Cues and Scenes Directly to Controllers {#StoringCuesandScenesDirectlytoControllers-10.3.}
+## Storing Cues and Scenes Directly to Controllers {#StoringCuesandScenesDirectlytoControllers-9.3.}
 
 
 **Cues and Scenes may be stored:**
@@ -179,7 +179,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 2. The Store to Controller pop-up will appear. Tap {Create a new Qlist} the Scene will be assigned the first available Qlist with the Scene's look being converted to Cue 1.
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FqjIYoECGpKkw2eosYT1W%2F10.3.webp?alt=media&token=92e2fb56-797e-4596-869b-0e1c042b9e01)
 
-## Master Controller {#MasterController-10.4.}
+## Master Controller {#MasterController-9.4.}
 
 
 In Vibe, at least one controller must be assigned as the [SELECT] controller. This controller will now be linked to the Master Controller.
@@ -214,7 +214,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Storing Cues to the Master Controller {#StoringCuestotheMasterController-10.5.}
+## Storing Cues to the Master Controller {#StoringCuestotheMasterController-9.5.}
 
 >A Qlist must be assigned to the [SELECT] controller before cues can be stored using theatre style keypad syntax
 
@@ -237,15 +237,15 @@ By default cues that do not have a Qlist or Controller specified in their destin
     
 4.   Pressing [STORE] [STORE] or [STORE] [ENTER] will store editor values to the next whole number cue at the end of a Qlist. (Next spacing can be customized in system settings).
 
->Vibe uses the "Clear Editor After Store" behaviour common in most theatre consoles.
-<span style="color:Red">The Controller will by default advance to the stored cue and clear the Editor</span>. This behaviour may be disabled in System Settings.
+>Vibe uses the "Clear Editor After Store" behavior common in most theatre consoles.
+<span style="color:Red">The Controller will by default advance to the stored cue and clear the Editor</span>. This behavior may be disabled in System Settings.
 
 
 
 
 
 
-## Storing Qlist Cues to any Controller {#StoringQlistCuestoanyController-10.6.}
+## Storing Qlist Cues to any Controller {#StoringQlistCuestoanyController-9.6.}
 
 ><span style="color:Red">The destination Qlist must be assigned to a controller in advance or after storing the first Cue, the destination Qlist will bump the current cue on the Master Controller out and replace it.</span>.
 
@@ -259,12 +259,12 @@ By default cues that do not have a Qlist or Controller specified in their destin
     
 4.  Valid Cue numbers per Qlist = 000.001 → 999.999
     
-5. Addition cues may be stored via keypad syntax specifying the Qlist # in advance or [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.)​
+5. Addition cues may be stored via keypad syntax specifying the Qlist # in advance or [9.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-9.3.)​
 
 
 
 
-## Cue Store Options {#CueStoreOptions-10.7.}
+## Cue Store Options {#CueStoreOptions-9.7.}
 
 In the process of storing a cue, a number of filters and settings are available. 
 
@@ -308,18 +308,18 @@ In the process of storing a cue, a number of filters and settings are available.
 	- {Show Filters} Opens user prebuilt filters in the pop-up.
     
 
--   Source behaviour when stored: 
-	- {Track} Normal system behaviour 
+-   Source behavior when stored: 
+	- {Track} Normal system behavior 
 	- {Skip Cue} - <span style="color:Gray">Tags a cue as a skip cue in the case of inserting a new cue. In the case of updating a cue by storing to an existing cue, only the values being updated will be made into Skip cells. </span>.
 	- <span style="color:MediumAquaMarine">{Qonly} Inserted cues will not affect the look of cues following them</span>
     
 
--   Look Ahead: (sometimes referred to as Mark Cue) [See: 15.3. Force Black](#ForceBlack-15.3.) 
+-   Look Ahead: (sometimes referred to as Mark Cue) [See: 14.3. Force Black](#ForceBlack-14.3.) 
 
 	- Unlike having to Look Ahead automatically preposition all dark parameters for all cues in a Qlist, a cue tagged in **Cue Store Options** as {Look Ahead} will preposition dark parameters for just the tagged cue.
     
 
--   Force Black - See: [15.1. Look Ahead (Move in Dark)](#LookAhead-15.1.) 
+-   Force Black - See: [14.1. Look Ahead (Move in Dark)](#LookAhead-14.1.) 
 
 	-  Tagged a cue as {Force Black} in Cue Store Options, is the same as setting the cue as {Force Black} in {Cue settings}.
 
@@ -328,7 +328,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Assigning Text Labels {#AssigningTextLabels-10.8.}
+## Assigning Text Labels {#AssigningTextLabels-9.8.}
 
 **Assign a Text Label to a Qlist:**
 
@@ -359,7 +359,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Modifying Cues and Scenes {#ModifyingCuesandScenes-10.9.}
+## Modifying Cues and Scenes {#ModifyingCuesandScenes-9.9.}
 
 **Modify a Cue or Scene using [UPDATE]:**
 
@@ -482,7 +482,7 @@ Cue Settings pop-up
 
 
 
-## Creating New Cues from Existing Cue Data {#CreatingNewCuesfromExistingCueData-10.10.}
+## Creating New Cues from Existing Cue Data {#CreatingNewCuesfromExistingCueData-9.10.}
 
 **To Copy a Cue to a new Cue:**
 
@@ -524,18 +524,18 @@ Cue Settings pop-up
 
 
 
-## Cue Time Properties {#CueTimeProperties-10.11.}
+## Cue Time Properties {#CueTimeProperties-9.11.}
 
 **Cue Time Properties:**
 
--   [10.11.1. Assigning Cue Time](#assigning-cue-time-10.11.1.)
+-   [9.11.1. Assigning Cue Time](#assigning-cue-time-9.11.1.)
     
--   [10.11.2. Wait and Follow Times](#wait-and-follow-times-10.11.2.)
+-   [9.11.2. Wait and Follow Times](#wait-and-follow-times-9.11.2.)
 
 
 
 
-###  Assigning Cue Time {#assigning-cue-time-10.11.1}
+###  Assigning Cue Time {#assigning-cue-time-9.11.1}
 
 **Cues may be assigned the following time properties:**
 
@@ -603,7 +603,7 @@ Alternately times can be randomly entering by tapping the desired time field and
 
 
 
-###  Wait and Follow Times {#wait-and-follow-times-10.11.2.}
+###  Wait and Follow Times {#wait-and-follow-times-9.11.2.}
 
 **There are two ways to make a cue automatically follow another:**
 
@@ -635,19 +635,19 @@ Alternately times can be randomly entering by tapping the desired time field and
 >To clear a Follow, turn the physical Follow Wheel until its display and the {Follow} display say N/A Press [ENTER}
 
 
-## Additional Cue Properties {#AdditionalCueProperties-10.12.}
+## Additional Cue Properties {#AdditionalCueProperties-9.12.}
 
 Additional Cue Properties:
 
--   ​[10.12.1. Link](#link-10.12.1.)​
+-   ​[9.12.1. Link](#link-9.12.1.)​
     
--   ​[10.12.2. Loop](#loop-10.12.2.)​
+-   ​[9.12.2. Loop](#loop-9.12.2.)​
     
--   ​[10.12.3. Tracking Options](#tracking-options-10.12.3.).
+-   ​[9.12.3. Tracking Options](#tracking-options-9.12.3.).
 
 
 
-### Link {#link-10.12.1.}
+### Link {#link-9.12.1.}
 
 Cues may be linked out of sequence using any of the following three methods: 
 
@@ -706,7 +706,7 @@ Cues may be linked out of sequence using any of the following three methods:
 
 >In cue sheet, cues that are disabled because of a Link are grayed out.
 
-### Loop {#loop-10.12.2.}
+### Loop {#loop-9.12.2.}
 
 In many consoles, the only way to create a loop is to create a link from the end of a range of cues back to the beginning. Follow time must then be assigned to all of the cues. In Vibe this is also possible but a shorter more efficient method is also provided. **LOOP** is a function similar to **LINK**. It is assigned in the Loop pop-up or via the Cue Settings pop-up.
 
@@ -788,7 +788,7 @@ In many consoles, the only way to create a loop is to create a link from the end
 
 >In live playback view, cues that are set as Loop Cues have an orange color.
 
-### Tracking Options {#tracking-options-10.12.3.}
+### Tracking Options {#tracking-options-9.12.3.}
 
 
 
@@ -800,7 +800,7 @@ In many consoles, the only way to create a loop is to create a link from the end
     
 3.  Block Cue - All cue parameter values whether tracked or hard will be made to act like hard values. Any new values added to cues above the Blocked cue will not track past a cue tagged a Block.
     
-4.  Track - The systems default behaviour.
+4.  Track - The systems default behavior.
     
 
 **There are two additional properties a cue can be tagged with:**
@@ -815,19 +815,19 @@ In live playback view, cues that are set as Skip Cues have a magenta color.
 
 
 
-## Parameter Time {#ParameterTime-10.13.}
+## Parameter Time {#ParameterTime-9.13.}
 
 
 **Parameter Time:**
 
--   [10.13.1. Assign Parameter Time During Cue Creation](#assign-parameter-time-during-cue-creation-10.13.1.)
+-   [9.13.1. Assign Parameter Time During Cue Creation](#assign-parameter-time-during-cue-creation-9.13.1.)
     
--   [10.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.)
+-   [9.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-9.13.2.)
     
--   [10.13.3. Fanning Parameter Time Time](#fanning-parameter-time-10.13.3.)
+-   [9.13.3. Fanning Parameter Time Time](#fanning-parameter-time-9.13.3.)
 
 
-### Assign Parameter Time During Cue Creation {#assign-parameter-time-during-cue-creation-10.13.1.}
+### Assign Parameter Time During Cue Creation {#assign-parameter-time-during-cue-creation-9.13.1.}
 
 
 1.  Set fixture parameter values in the Editor.
@@ -853,9 +853,9 @@ In live playback view, cues that are set as Skip Cues have a magenta color.
     
 8.  Store the Cue using any of the methods described under: 
 
--   [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.) 
--   [10.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-10.5.) 
--   [10.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-10.6.)
+-   [9.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-9.3.) 
+-   [9.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-9.5.) 
+-   [9.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-9.6.)
     
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FVMwWaGG9Qr6NDEWLQKOl%2F10.13.1%20parameter%20time.png?alt=media&token=55487d5d-9035-4083-a55e-a02b0b0573a4)
@@ -866,7 +866,7 @@ In live playback view, cues that are set as Skip Cues have a magenta color.
 
 
 
-### Adding or Modifying Parameter Time after Cue Creation {#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.}
+### Adding or Modifying Parameter Time after Cue Creation {#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-9.13.2.}
 
 
 **Method 1:**
@@ -891,7 +891,7 @@ In live playback view, cues that are set as Skip Cues have a magenta color.
     
 7. Press [UPDATE]. 
 
-See Also: [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
+See Also: [9.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-9.9.)
     
 
 **Method 2:**
@@ -938,7 +938,7 @@ See Also: [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
 
 
 
-### Fanning Parameter Time {#fanning-parameter-time-10.13.3.}
+### Fanning Parameter Time {#fanning-parameter-time-9.13.3.}
 
 
 **Method 1:**
@@ -1000,7 +1000,7 @@ See Also: [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
 
 **Remove a fanned parameter time:** 
 
-See: [10.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.)
+See: [9.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-9.13.2.)
 
 
 **Cell Time Fan**
@@ -1026,7 +1026,7 @@ To Set Fan Cell Time:
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FYEcjecqiWJTijSC3aOss%2Fimage.png?alt=media&token=85286838-edf2-4ba4-9bb8-f6263938dca5)
 
 
-## Parameter Profile {#ParameterProfile-10.14.}
+## Parameter Profile {#ParameterProfile-9.14.}
 
 Profile determine a parameter's behavior during a fade.
 Profiles are always relative to the fade time.
@@ -1062,19 +1062,19 @@ User may apply the popup with nothing selected on the options or with all the op
 
 
 
-## Group Submasters {#GroupSubmasters-10.15.}
+## Group Submasters {#GroupSubmasters-9.15.}
 
 
 **Group Submasters:**
 
--   [10.15.1. Convert a Scene into a Group Submaster](#convert-a-scene-into-a-group-submaster-10.15.1.)
+-   [9.15.1. Convert a Scene into a Group Submaster](#convert-a-scene-into-a-group-submaster-9.15.1.)
     
--   [10.15.2. Assign a Group Submater directly to a Slider Controller](#assign-a-group-submater-directly-to-a-slider-controller-10.15.2.)
+-   [9.15.2. Assign a Group Submater directly to a Slider Controller](#assign-a-group-submater-directly-to-a-slider-controller-9.15.2.)
     
--   [10.15.3. Assign a Group Submaster using existing Groups](#assign-a-group-submaster-using-existing-groups-10.15.3.)
+-   [9.15.3. Assign a Group Submaster using existing Groups](#assign-a-group-submaster-using-existing-groups-9.15.3.)
 
 
-### Convert a Scene into a Group Submaster {#convert-a-scene-into-a-group-submaster-10.15.1.}
+### Convert a Scene into a Group Submaster {#convert-a-scene-into-a-group-submaster-9.15.1.}
 
 
 Any Scene can be easily converted into a Group **Submaster** (Known in some consoles as Inhibitive Submasters or Group Masters).
@@ -1105,7 +1105,7 @@ All fixtures in the Scene will now act as Group Submasters. Scene fixture values
 
 
 
-### Assign a Group Submater directly to a Slider Controller {#assign-a-group-submater-directly-to-a-slider-controller-10.15.2.}
+### Assign a Group Submater directly to a Slider Controller {#assign-a-group-submater-directly-to-a-slider-controller-9.15.2.}
 
 
 1.  Specify a fixture selection but **do not** assign editor values.
@@ -1118,7 +1118,7 @@ All fixtures in the Scene will now act as Group Submasters. Scene fixture values
 ><span style="color:Red">When the slider handle is down, the [Top Button] will flash to indicate that levels are being inhibited. When it is at full, the button's blue backlight will go steady.</span>
 
 
-### Assign a Group Submaster using existing Groups {#assign-a-group-submaster-using-existing-groups-10.15.3.}
+### Assign a Group Submaster using existing Groups {#assign-a-group-submaster-using-existing-groups-9.15.3.}
 
 
 **Assign a Group to a Slider Controller using keypad syntax:**
