--- a/13-Playback-Controllers.Rmd
+++ b/13-Playback-Controllers.Rmd
@@ -5,21 +5,21 @@ Cues and Scenes are played back using the 15 **Motorized Slider Controllers**, n
 
 **The following is covered in this chapter:**
 
-- [14.1. Controller Priority Logic](#ControllerPriorityLogic-14.1.)
-- [14.2. Controller Overview](#ControllerOverview-14.2.)
-- [14.3. Master Controller](#MasterController-14.3.)
-- [14.4. GOTO and LOAD](#GOTOandLOAD-14.4.)
-- [14.5. Configuring Controllers](#ConfiguringControllers-14.5.)
-- [14.6. Controller Color Codes](#ControllerColorCodes-14.6.)
-- [14.7. Working With controllers](#WorkingWithcontrollers-14.7.)
-- [14.8. Controller Release and Free](#ControllerReleaseandFree-14.8.)
-- [14.9. Controller Qlist Properties](#ControllerQlistProperties-14.9.)
-- [14.10. Controller Modes](#ControllerModes-14.10.)
-- [14.11. Rate and Teach Keys](#RateandTeachKeys-14.11.)
-- [14.12. Playback Master](#Playback-Master-14.12.)
-- [14.13. Move Controllers](#Move-Controllers-14.13.)
+- [13.1. Controller Priority Logic](#ControllerPriorityLogic-13.1.)
+- [13.2. Controller Overview](#ControllerOverview-13.2.)
+- [13.3. Master Controller](#MasterController-13.3.)
+- [13.4. GOTO and LOAD](#GOTOandLOAD-13.4.)
+- [13.5. Configuring Controllers](#ConfiguringControllers-13.5.)
+- [13.6. Controller Color Codes](#ControllerColorCodes-13.6.)
+- [13.7. Working With controllers](#WorkingWithcontrollers-13.7.)
+- [13.8. Controller Release and Free](#ControllerReleaseandFree-13.8.)
+- [13.9. Controller Qlist Properties](#ControllerQlistProperties-13.9.)
+- [13.10. Controller Modes](#ControllerModes-13.10.)
+- [13.11. Rate and Teach Keys](#RateandTeachKeys-13.11.)
+- [13.12. Playback Master](#Playback-Master-13.12.)
+- [13.13. Move Controllers](#Move-Controllers-13.13.)
 
-## Controller Priority Logic {#ControllerPriorityLogic-14.1.}
+## Controller Priority Logic {#ControllerPriorityLogic-13.1.}
 
 
 
@@ -54,7 +54,7 @@ OR
 
 
 
-## Controller Overview {#ControllerOverview-14.2.}
+## Controller Overview {#ControllerOverview-13.2.}
 
 **Controllers are used to playback or execute a number of objects:**
 
@@ -123,7 +123,7 @@ OR
 
 
 
-## Master Controller {#MasterController-14.3.}
+## Master Controller {#MasterController-13.3.}
 
 **Master Controller:**
 
@@ -144,7 +144,7 @@ OR
 
 
 
-## GOTO and LOAD {#GOTOandLOAD-14.4.}
+## GOTO and LOAD {#GOTOandLOAD-13.4.}
 
 GOTO and LOAD are used to crossfade to cues out of sequence. By default, GOTO immediately transitions to the specified cue in the system **GOTO Time**. LOAD preloads controllers. The next [GO] will transition to the preloaded cue in **Cue Time**.
 
@@ -173,7 +173,7 @@ GOTO and LOAD are used to crossfade to cues out of sequence. By default, GOTO im
     
 3.  Select the {Cue}.
     
-4.  Select behaviour.
+4.  Select behavior.
     
 
 -   {Default GOTO time} - Uses system default GOTO Time.
@@ -227,7 +227,7 @@ GOTO and LOAD are used to crossfade to cues out of sequence. By default, GOTO im
 
 
 
-## Configuring Controllers {#ConfiguringControllers-14.5.}
+## Configuring Controllers {#ConfiguringControllers-13.5.}
 
 Controller buttons and sliders may be customized to allow maximum flexibility. When Qlists and Scenes are initially assigned to Controllers, the buttons are configured as per the **System Settings defaults** for Controller and Controller Action. Defaults are accessed by tapping the System Status area at the far right side of the controller display.
 
@@ -252,7 +252,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 2. Tap one of the three assignable {Buttons} or the {Slider} button in the centre - A context sensitive drop down menu based on the object assigned and the specific button selected will appear.
 
-3. Choose a Control behaviour from the menu. 
+3. Choose a Control behavior from the menu. 
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fj6JDjNRFb7TWGRNNO9Y0%2F14.5.2.webp?alt=media&token=9639a28e-b8fe-40cc-a602-83092ac7d617)
 
@@ -264,11 +264,11 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fm5ysy6BoE6l3FCWVHrYn%2F14.5.4.webp?alt=media&token=f6271bd6-0fe1-4576-ae64-f237d372b124)
 
->Default settings for controllers assigned Qlists, Scenes, and Submasters may be set in the Defaults section of the System Settings Pop-up. See [7.5.1. Controller Settings](#controller-settings-7.5.1.).
+>Default settings for controllers assigned Qlists, Scenes, and Submasters may be set in the Defaults section of the System Settings Pop-up. See [6.5.1. Controller Settings](#controller-settings-6.5.1.).
 
 
 
-## Controller Color Codes {#ControllerColorCodes-14.6.}
+## Controller Color Codes {#ControllerColorCodes-13.6.}
 
 
 
@@ -285,7 +285,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 
 
-## Working With controllers {#WorkingWithcontrollers-14.7.}
+## Working With controllers {#WorkingWithcontrollers-13.7.}
 
 **Controller types:** - Detailed
 
@@ -360,15 +360,15 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
     
 2.  [CUE] [#]
     
-3.  [HERE] Press any of the controller's buttons - The Qlist and Cue will be assigned to the Controller and default controller configuration and settings will be applied. See: [7.5.2. Controller Actions](#controller-actions-7.5.2.)
+3.  [HERE] Press any of the controller's buttons - The Qlist and Cue will be assigned to the Controller and default controller configuration and settings will be applied. See: [6.5.2. Controller Actions](#controller-actions-6.5.2.)
     
 
 **Release and unload Controllers:**
 
--   See: [14.8. Controller Release and Free](#ControllerReleaseandFree-14.8.)
+-   See: [13.8. Controller Release and Free](#ControllerReleaseandFree-13.8.)
 
 
-## Controller Release and Free {#ControllerReleaseandFree-14.8.}
+## Controller Release and Free {#ControllerReleaseandFree-13.8.}
 
 
 
@@ -391,9 +391,9 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 **Release Time -**
 
--   By default controllers use the Default Release Time set in System Settings Timing. See: [7.2. Timing](#Timing-7.2.)
+-   By default controllers use the Default Release Time set in System Settings Timing. See: [6.2. Timing](#Timing-6.2.)
     
--   Release time may also be set on a Qlist basis using the Qlist Properties Pop-up. See: [7.5.3. Qlist Properties](#qlist-properties-7.5.3.)
+-   Release time may also be set on a Qlist basis using the Qlist Properties Pop-up. See: [6.5.3. Qlist Properties](#qlist-properties-6.5.3.)
     
 
 **Free -** Unloads a controller. It does not delete the loaded object.
@@ -407,12 +407,12 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 -   [VIBE] + [FREE]
 
 
-## Controller Qlist Properties {#ControllerQlistProperties-14.9.}
+## Controller Qlist Properties {#ControllerQlistProperties-13.9.}
 
 
 
 By default, the first incident of a Qlist being assigned to a controller will take its Qlist properties from the user default Qlist Properties. 
-**For Qlist Properties details, see:** [7.5.3. Qlist Properties](#qlist-properties-7.5.3.)
+**For Qlist Properties details, see:** [6.5.3. Qlist Properties](#qlist-properties-6.5.3.)
 
 -   Each new incident of assigning the same Qlist to additional controllers will initially copy the Qlist properties from the first assignment.
     
@@ -424,7 +424,7 @@ By default, the first incident of a Qlist being assigned to a controller will ta
 
 
 
-## Controller Modes {#ControllerModes-14.10.}
+## Controller Modes {#ControllerModes-13.10.}
 
 
 
@@ -432,7 +432,7 @@ The Controller Mode keys are located at the far left of the console beside the m
 
 **Controller Modes allow the following to be adjusted:**
 
--   [FADERS] - Normal behaviour for the fader as assigned in Controller Definitions
+-   [FADERS] - Normal behavior for the fader as assigned in Controller Definitions
     
 -   [RATE] - The Rate of the fades, loops, effects, and chasers on the controller will be proportionally adjusted. Motorized faders will move to an optimized position of 32% allowing for proportional adjustment of a controller's rate.
     
@@ -443,7 +443,7 @@ The Controller Mode keys are located at the far left of the console beside the m
 -    <span style="color:Gray">[PROTECT] - When implemented, must be held down before any of the fader modes may be changed.</span>
 
 
-## Rate and Teach Keys {#RateandTeachKeys-14.11.}
+## Rate and Teach Keys {#RateandTeachKeys-13.11.}
 
 
 
@@ -507,7 +507,7 @@ The Rate function allows users to adjust controller rates or effects parameters 
 3.  {Freeze Effect - Pauses all running effects until the {Freeze Effect} key is toggled again.
     
 
->Freeze only effects chases and effects at the playback level. To permanently release an effect from a cue see: [13.3.1. Building Effects Using the Advanced Effects Editor](#build-a-basic-effect-in-the-advanced-effects-editor-13.3.1.)
+>Freeze only effects chases and effects at the playback level. To permanently release an effect from a cue see: [12.3.1. Building Effects Using the Advanced Effects Editor](#build-a-basic-effect-in-the-advanced-effects-editor-12.3.1.)
 
 **Transport Bar:**
 
@@ -545,7 +545,7 @@ When actively in the Rate Screen, physical controller keys are mapped to the rat
 3.   <span style="color:Gray">When implemented, Teach time may also be set from the Rate Screen using the transport bar buttons.</span>
 
 
-## Playback Master {#Playback-Master-14.12.}
+## Playback Master {#Playback-Master-13.12.}
 
 
 A Playback Master is a controller that masters other controllers.
@@ -573,7 +573,7 @@ Playback Masters can also be stored in snaps.
 
 
 
-## Move Controllers {#Move-Controllers-14.13.}
+## Move Controllers {#Move-Controllers-13.13.}
 
 
 Implemented MOVE function on controllers.
